<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tab1_text"
        style="@style/Style.ActionBarTabTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/tab_height"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/location"
        android:textColor="@color/orange"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tab2_text"
        style="@style/Style.ActionBarTabTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/tab_height"
        android:layout_weight="1.0"
        android:gravity="center"
        android:text="@string/call_log"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tab3_text"
        style="@style/Style.ActionBarTabTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/tab_height"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sms_log"
        android:textStyle="normal" />

</LinearLayout>