<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <!--Title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_toolbar_height"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textSize="@dimen/activity_toolbar_text_size" />

    </RelativeLayout>

    <!--Content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--账号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/linearItemHeight"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/content_text_size_12" />

            <EditText
                android:id="@+id/login_inputUser"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/loginHint"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="@dimen/content_text_size_12" />

        </LinearLayout>

        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/linearItemHeight"
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/content_text_size_12" />

            <EditText
                android:id="@+id/login_inputPass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="@dimen/content_text_size_12" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linearItemHeight"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ProgressBar
                android:id="@+id/login_pb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="5dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/content_text_size_12" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>