<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <!--Title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_toolbar_height"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/meInfo_back"
            android:layout_width="@dimen/activity_toolbar_height"
            android:layout_height="@dimen/activity_toolbar_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="?android:attr/actionBarItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back_icon" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/me_user"
            android:textSize="@dimen/activity_toolbar_text_size" />

    </RelativeLayout>

    <!--Content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/meInfo_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linearItemHeight"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center" />

        <!--修改密码-->
        <LinearLayout
            android:id="@+id/meInfo_changePass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linearItemHeight"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textSize="@dimen/content_text_size_12" />

        </LinearLayout>

        <!--退出登录-->
        <LinearLayout
            android:id="@+id/meInfo_exitLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linearItemHeight"
            android:layout_marginTop="1px"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_login"
                android:textSize="@dimen/content_text_size_12" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>